feat: add Conductor extension with bundled templates, fix gemini-3-pro and default token limits

--- a/.env.example
+++ b/.env.example
@@ -43,3 +43,9 @@ TAVILY_API_KEY=
 # Create engine: https://programmablesearchengine.google.com/
 GOOGLE_API_KEY=
 GOOGLE_SEARCH_ENGINE_ID=
+
+# ----- Bundled Extensions (Optional) -----
+# Conductor: Context-driven development workflow
+# Provides /conductor:setup, /conductor:newTrack, /conductor:implement commands
+# Set to "true" to enable planning-first workflow
+CONDUCTOR_ENABLED=false
